Descriptors complete
